Added voice support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="Shared/main.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1985/1985500.png" type="image/x-icon">
+
+    <!-- ResponsiveVoice -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Q5xoKd8Y"></script>
 </head>
 <body onload="checkNetwork()" oncontextmenu="return false">
     <div id="content" class="content">
